[package]
name = "rust-exploration"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik.bjareholt@gmail.com>"]

[lib]
name = "ffitest"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "gravitysim"
path = "src/main.rs"

[dependencies]
libc = "0.2.0"
rand = "0.3"
nalgebra = "0.10.*"
piston_window = "0.61.0"
itertools = "0.5.9"
